--- a/.github/workflows/main_marginanalyserv1.yml
+++ b/.github/workflows/main_marginanalyserv1.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - marginanalyserv1
 
 on:
@@ -16,10 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: '16.x'
+
 
       - name: npm install, build, and test
         run: |
